--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
-:root {
-  --primaryColor: red;
-  --secondaryColo: blue;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +9,7 @@ body {
   font-size: 16px;
   font-family: "Mulish", sans-serif;
   font-style: normal;
+  color: rgba(19, 19, 24, 0.7);
 }
 
 a {
@@ -25,14 +21,97 @@ img {
   vertical-align: middle;
 }
 
+ul {
+  list-style: none;
+}
+
 .flex {
   display: flex;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.text-white {
+  color: white;
+}
+
+.py-90 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
+.py-60 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .container {
-  width: 1200px;
+  width: 1170px;
   display: flex;
   justify-content: center;
+  margin: 0 auto;
+}
+
+.navbar {
+  width: 100%;
+  max-height: 80px;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar__logo {
+  align-items: center;
+  gap: 20px;
+}
+.navbar__logo-text {
+  font-weight: 700;
+  pointer-events: auto;
+}
+.navbar__logo-text span {
+  color: #FF5400;
+}
+.navbar__nav {
+  align-items: center;
+  gap: 20px;
+}
+.navbar__link {
+  color: #424247;
+  text-transform: capitalize;
+  font-size: 18px;
+}
+.navbar__link:hover {
+  color: #FF5400;
+}
+
+.banner {
+  background: url("../images/herobg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  border-radius: 16px;
+}
+.banner__info {
+  max-width: 800px;
+  margin: 0 auto;
+}
+.banner__info .title {
+  font-size: 64px;
+  font-weight: 700;
+}
+.banner__info .des {
+  padding: 0 60px;
+  margin: 24px 0 48px 0;
+}
+.banner__search {
+  max-width: 800px;
+  background-color: rgba(255, 255, 255, 0.3);
+  margin: 0 auto;
+  border-radius: 8px;
+  justify-content: center;
+  padding: 20px 0px;
+  gap: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
